# tfa_mockup_project

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: init_db_tables.py
deploy/: .env  docker-compose.yaml
dockerfiles/: Dockerfile
fastapi_auth/: main.py
fastapi_auth/api/: __init__.py  logger.py
fastapi_auth/api/endpoints/: router.py
fastapi_auth/api/endpoints/api_v1/: auth.py  tasks.py  two_factor_auth.py  users.py
fastapi_auth/core/: config.py  enums.py  security.py  two_factor_auth.py  utils.py
fastapi_auth/crud/: backup_token.py  base_crud.py  device.py  users.py
fastapi_auth/db/: base.py  base_class.py  session.py
fastapi_auth/models/: device.py  users.py
fastapi_auth/schemas/: backup_token_schema.py  device_schema.py  jwt_token_schema.py  user_schema.py
fastapi_auth/tasks/: __init__.py  celery_conf.py  tasks.py
scripts/: entrypoint.sh  start_celery_flower.sh  start_celery_worker.sh
